@@ -1,0 +1,15 @@
+# web components
+
+module Gluon
+  module Web
+    # for ident(1)
+    CVS_ID = '$Id$'
+
+    autoload :OneTimeToken, 'gluon/web/token'
+  end
+end
+
+# Local Variables:
+# mode: Ruby
+# indent-tabs-mode: nil
+# End:
